--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "client",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://AdhiJordan.github.io/Shopping_Cart",
     "dependencies": {
         "@auth0/auth0-react": "^1.12.0",
         "@emotion/react": "^11.10.0",
@@ -18,6 +19,7 @@
         "crypto-js": "^4.1.1",
         "dotenv": "^16.0.1",
         "firebase": "^8.9.0",
+        "gh-pages": "^4.0.0",
         "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-bootstrap": "^2.6.0",
@@ -38,8 +40,10 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
-        "build": "react-scripts build",
+        "build": "react-scripts build && cp build/index.html build/404.html",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
